--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -7,8 +6,8 @@
 }
 
 body {
-  background: #fdfdfd;
-  font-family: "Nunito", sans-serif;
+  background: #232424;
+  font-family: "Titillium Web", sans-serif;
   font-size: 1rem;
 }
 
@@ -26,7 +25,7 @@ nav {
 }
 
 nav img {
-  height: 100px;
+  height: 32px;
 }
 
 nav ul {
@@ -41,15 +40,15 @@ nav li {
 nav ul li a {
   text-decoration-line: none;
   text-transform: uppercase;
-  color: #393b45;
+  color: #eaeaea;
 }
 
 nav ul li a:hover {
-  color: #14e6dd;
+  color: #de4643;
 }
 
 nav h1 {
-  color: #106d69;
+  color: #eaeaea;
   margin-bottom: 0.5rem;
 }
 .container {
@@ -67,11 +66,11 @@ nav h1 {
   align-items: center;
   flex-direction: column;
   width: 17rem;
-  background: #fff;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   border-radius: 10px;
   margin: auto;
   overflow: hidden;
+  border-color: #222;
+  color: whitesmoke
 }
 
 .card-image {
@@ -80,19 +79,35 @@ nav h1 {
   object-fit: cover;
 }
 
+.card:hover {
+  transform: scale(1.05);
+  transition: all 0.3s ease-in-out;
+}
+
+.flag-image {
+  height: 0.8rem;
+  width: auto;
+}
+
 .card-name {
-  color: #222;
+  color: #dedede;
   font-weight: 700;
   text-transform: capitalize;
   font-size: 1.1rem;
-  margin-top: 0.5rem;
 }
 
 .card-about {
-  text-overflow: ellipsis;
-  width: 15rem;
-  white-space: nowrap;
-  overflow: hidden;
+  color: #dedede;
+  font-weight: 700;
+  text-transform: capitalize;
+  font-size: 1.1rem;
+}
+
+.card-team {
+  color: #dedede;
+  font-weight: 600;
+  text-transform: capitalize;
+  font-size: 2rem;
   margin-bottom: 1rem;
 }
 
@@ -100,21 +115,20 @@ nav h1 {
   border: none;
   background: none;
   border-radius: 5px;
-  box-shadow: 1px 1px 2px rgba(21, 21, 21, 0.1);
   cursor: pointer;
   font-size: 1.25rem;
   margin: 0 1rem;
   padding: 0.25rem 2rem;
   transition: all 0.25s ease-in-out;
   background: hsl(110, 21%, 93%);
-  color: hsl(141, 100%, 22%);
   margin-bottom: 1rem;
 }
 
 .btn:focus,
 .btn:hover {
   box-shadow: 1px 1px 2px rgba(21, 21, 21, 0.2);
-  background: hsl(111, 21%, 86%);
+  border-color: #a5a5a5;
+  border-style: solid;
 }
 
 .about-container {
