--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -1,9 +1,9 @@
 <nav>
-  <img src="static\images\logo.png" alt="VSCode Extensions site logo." />
-  <h1>VSCode Extensions</h1>
+  <img src="static\images\f1.png" alt="F1 logo."/>
+  <h1>Formula 1 Stats</h1>
   <ul class="topnav">
     <li><a href="#">Home</a></li>
-    <li><a href="add.html">Add me</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="teams.html">Teams</a></li>
+    <li><a href="results.html">Results</a></li>
   </ul>
 </nav>
