--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -1,9 +1,15 @@
 <nav>
-  <img src="static\images\f1.png" alt="F1 logo." />
+  <img src="static/images/f1.png" alt="F1 logo." />
   <h1>Formula 1</h1>
-  <ul class="topnav">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="teams.html">Teams</a></li>
-    <li><a href="results.html">Championship</a></li>
+
+  <!-- Menu toggle shown on small screens -->
+  <button id="menu-toggle" class="menu-toggle">
+    <span class="hamburger"></span>
+  </button>
+
+  <ul id="main-nav" class="topnav" role="menubar">
+    <li role="none"><a role="menuitem" href="index.html">Home</a></li>
+    <li role="none"><a role="menuitem" href="teams.html">Teams</a></li>
+    <li role="none"><a role="menuitem" href="results.html">Championship</a></li>
   </ul>
 </nav>
