--- a/static/css/results.css
+++ b/static/css/results.css
@@ -84,6 +84,7 @@ h1 {
   line-height: 1;
 }
 .driver-name {
+  text-align: left;
   font-weight: 600;
   font-size: 14px;
 }
@@ -94,7 +95,7 @@ h1 {
 }
 .driver-time {
   margin-left: auto;
-  font-size: 12px;
+  font-size: 16px;
   color: var(--muted);
 }
 
